fix: spacing around the facet headers. sortkey of the people with no first or last name. prefix entity id with type in the index to prevent accidental retrieval (e.g. x => xb1; now ppl:xb1).

--- a/frontend/assets/css/main.scss
+++ b/frontend/assets/css/main.scss
@@ -752,9 +752,16 @@ ul.undecorated-list {
 
 // Search page
 
-.panel.is-info .panel-heading {
-  color: $light;
-  background-color: $primary;
+.panel.is-info {
+  .panel-heading {
+    color: $light;
+    background-color: $primary;
+    margin-bottom: 0.5em;
+  }
+
+  .panel-block {
+    margin-bottom: 1em;
+  }
 }
 
 .search-results {
